[gd_scene load_steps=5 format=3 uid="uid://c2dcha7sipp8a"]

[ext_resource type="Script" uid="uid://ck610abr6ujd" path="res://player.gd" id="1_4flbx"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_c3xsu"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_4flbx"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_4flbx"]

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("CAMERA_CONTROLLER")]
collision_mask = 6
script = ExtResource("1_4flbx")
CAMERA_CONTROLLER = NodePath("Pivot/Camera3D")

[node name="Pivot" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="Pivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
fov = 90.0

[node name="Right Hand" type="Node3D" parent="Pivot/Camera3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_c3xsu")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_4flbx")
skeleton = NodePath("../Pivot")

[node name="MobDetector" type="Area3D" parent="."]
transform = Transform3D(1.05, 0, 0, 0, 1.05, 0, 0, 0, 1.05, 0, 0, 0)
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="MobDetector"]
shape = SubResource("CapsuleShape3D_4flbx")

[node name="DamageTimer" type="Timer" parent="."]

[connection signal="body_entered" from="MobDetector" to="." method="_on_mob_detector_body_entered"]
[connection signal="body_exited" from="MobDetector" to="." method="_on_mob_detector_body_exited"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_damage_timer_timeout"]
